# Russian-Language-Trainer

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md
src/: Makefile  entrypoint.sh  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements.txt  tailwind.config.js
src/apps/announcements/: admin.py  mixins.py  models.py  urls.py  views.py
src/apps/announcements/migrations/: 0001_initial.py  0002_initial.py
src/apps/announcements/templates/: announcement.html
src/apps/announcements/templatetags/: my_custom_filters.py
src/apps/cards/: admin.py  enums.py  managers.py  mixins.py  models.py  urls.py  views.py
src/apps/cards/migrations/: 0001_initial.py
src/apps/courses/: admin.py  managers.py  models.py  urls.py  views.py
src/apps/courses/migrations/: 0001_initial.py
src/apps/decks/: admin.py  managers.py  mixins.py  models.py  urls.py  views.py
src/apps/decks/migrations/: 0001_initial.py
src/apps/feed/: mixins.py  urls.py  views.py
src/apps/importer/: forms.py  mixins.py  services.py  urls.py  views.py
src/apps/importer/templates/: data-import.html
src/apps/proverbs/: admin.py  apps.py  models.py
src/apps/proverbs/migrations/: 0001_initial.py
src/apps/reviews/: admin.py  forms.py  models.py  urls.py
src/apps/reviews/migrations/: 0001_initial.py  0002_initial.py
src/apps/reviews/mixins/: heatmap.py  piechart.py  progress_old.py  review.py
src/apps/shared/: mixins.py  utils.py  validators.py
src/apps/support/: admin.py  apps.py  forms.py  mixins.py  models.py  urls.py  views.py
src/apps/users/: apps.py  models.py
src/apps/words/: models.py
src/config/: context_processors.py  middleware.py  signals.py  tasks.py  urls.py  views.py
src/config/messages/: 01_welcome.md  02_beta.md
src/config/settings/: __init__.py  common.py  dev.py  prod.py  utils.py
src/static/css/: main.css  output.css
src/templates/errors/: 400.html  404-auth.html  404-noauth.html  500.html  maintenance.html
src/templates/icons/: account-cog.html  alert-circle-outline.html  alert-decagram.html  alert-outline.html  arrow-left.html  arrow-right.html  arrow-top-right.html  autorenew.html  bell-outline.html  bell-ring-outline.html  book-open-variant-outline.html  bullhorn-variant-outline.html  bullhorn.html  cards.html  chart-line.html  check-circle-outline.html  check-decagram-green.html  chevron-down.html  chevron-left.html  chevron-right.html  close-circle-outline.html  dark-mode.html  dict.html  dots-circle.html  dots-horizontal.html  email-outline.html  eye.html  filter.html  format-list-group.html  frequently-asked-questions.html  home.html  light-mode.html  list.html  logout.html  magnify.html  menu-down.html  menu-right.html  menu.html  play.html  plus-circle-yellow.html  (+5 more)
src/templates/layout/: _base.html  main.html  widgets.html
src/templates/partials/: audio_player.html  breadcrumbs.html  play_button.html
src/tests/: test-settings.py  test_course_manager.py  test_enum_wordclasses.py  test_model_course.py
(+237 files in other folders)
